--- a/StuartChristhilf/site/index.html
+++ b/StuartChristhilf/site/index.html
@@ -109,7 +109,7 @@
         </header>
         <p><hr />
 <p><span style="font-family: Comic Sans MS; font-size: 30px;">Hello welcome to my site! My name is Stuart Christhilf and here is a portfolio of all projects and activities I have participated in over the years.</span></p>
-<p><a class="md-button" href="about/">Engineering Projects</a></p></p>
+<p><a href="Engineering/"><img alt="Engineering Projects" src="images/index/engineer.png" /></a></p></p>
     </article>
 </section>
 <!-- endblock -->
